--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 <link rel="stylesheet" type="text/css"
 	href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/0.32.0/handsontable.full.css">
 <link rel="stylesheet" type="text/css"
-	href="https://handsontable.com/static/css/main.css">
+	href="http://handsontable.com/static/css/main.css">
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
 	integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
@@ -31,7 +31,7 @@ title: Home
 	integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
 	crossorigin="anonymous">
 	
-<script src="https://docs.handsontable.com/0.18.0/bower_components/handsontable/dist/handsontable.full.js"></script>
+<script src="http://docs.handsontable.com/0.18.0/bower_components/handsontable/dist/handsontable.full.js"></script>
 
 <link rel="stylesheet" type="text/css"
 	href="//fonts.googleapis.com/css?family=Open+Sans" />
