--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
   <li>We will compress the data in JSP and decompress in the controller.</li>
   <li>We will use lz-string to compress and decompress.</li>
   <li>Add lz-string js to your JSP <br><code>&lt;script language="javascript" src="lz-string.js"&gt;&lt;/script&gt;</code> </li>
-  <li>Add the below code to compress the handson table data.<code>
+  <li>Add the below code to compress the handson table data.<br><code>
 		var compressed = LZString.compress(hot.getData());<br>
 	</code> </li>
   <li>Decompress the compressed data in your controller using the below code.<br>
