--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Home
 ---
+<div class="img">
+    <img src="http://res.cloudinary.com/shreyas/image/upload/v1498848033/Screen_Shot_2017-07-01_at_12.09.41_AM_riefve.png" />
+</div>
 
 
 <p><ul>
